// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/StatusIndicator All 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="StatusIndicator-sc-17eyafq-0 duQOOY"
      font-size="smaller"
      type="neutral"
    >
      Neutral
    </p>
    <p
      class="StatusIndicator-sc-17eyafq-0 jyefEH"
      font-size="smaller"
      type="dark"
    >
      Dark
    </p>
    <p
      class="StatusIndicator-sc-17eyafq-0 hVQEfU"
      font-size="smaller"
      type="quiet"
    >
      Quiet
    </p>
    <p
      class="StatusIndicator-sc-17eyafq-0 icafJD"
      font-size="smaller"
      type="informative"
    >
      Informative
    </p>
    <p
      class="StatusIndicator-sc-17eyafq-0 iOcUJn"
      font-size="smaller"
      type="success"
    >
      Success
    </p>
    <p
      class="StatusIndicator-sc-17eyafq-0 jBhAA"
      font-size="smaller"
      type="warning"
    >
      Warning
    </p>
    <p
      class="StatusIndicator-sc-17eyafq-0 jPDuwr"
      font-size="smaller"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/StatusIndicator Danger 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="StatusIndicator-sc-17eyafq-0 cYpilj"
      font-size="smaller"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/StatusIndicator Dark 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="StatusIndicator-sc-17eyafq-0 dCFkXX"
      font-size="smaller"
      type="dark"
    >
      Dark
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/StatusIndicator Following text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-15glbbx-0-h2 fDHveu"
        font-size="heading2"
        font-weight="normal"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-15glbbx-0-h3 hRTZmU"
        font-size="heading3"
        font-weight="medium"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-15glbbx-0 dyWMLQ"
        color="currentColor"
        font-size="medium"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-15glbbx-0 CwIGY"
        color="currentColor"
        font-size="small"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-15glbbx-0 govdhd"
        color="currentColor"
        font-size="smaller"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 gODzGn"
    >
      <span
        class="Text-sc-15glbbx-0 dyWMLQ"
        color="currentColor"
        font-size="medium"
      >
        Long label Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in eleifend metus, in tempus sapien. Morbi eget felis est. Nunc facilisis vel nisi nec ornare. Ut blandit ullamcorper enim sed fringilla. Quisque malesuada pharetra tincidunt. Mauris mauris tortor, maximus vitae tempor ac, tincidunt pharetra augue. In eget suscipit est. Suspendisse feugiat risus urna
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/StatusIndicator Informative 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="StatusIndicator-sc-17eyafq-0 jpMSzX"
      font-size="smaller"
      type="informative"
    >
      Informative
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/StatusIndicator Inside flex 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 edgbEZ"
    >
      <span
        class="Text-sc-15glbbx-0-h2 eFNllF"
        font-size="heading2"
        font-weight="normal"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 edgbEZ"
    >
      <span
        class="Text-sc-15glbbx-0-h3 iFAMHA"
        font-size="heading3"
        font-weight="medium"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 edgbEZ"
    >
      <span
        class="Text-sc-15glbbx-0 fJPplc"
        color="currentColor"
        font-size="medium"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 edgbEZ"
    >
      <span
        class="Text-sc-15glbbx-0 kbWOZw"
        color="currentColor"
        font-size="small"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 edgbEZ"
    >
      <span
        class="Text-sc-15glbbx-0 hVyoBJ"
        color="currentColor"
        font-size="smaller"
      >
        Label
      </span>
      <p
        class="StatusIndicator-sc-17eyafq-0 kvCrls"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/StatusIndicator Neutral 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="StatusIndicator-sc-17eyafq-0 kvCrls"
      font-size="smaller"
      type="neutral"
    >
      Neutral
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/StatusIndicator Quiet 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="StatusIndicator-sc-17eyafq-0 bmXvpc"
      font-size="smaller"
      type="quiet"
    >
      Quiet
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/StatusIndicator Success 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="StatusIndicator-sc-17eyafq-0 dljkuv"
      font-size="smaller"
      type="success"
    >
      Success
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/StatusIndicator Warning 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <p
      class="StatusIndicator-sc-17eyafq-0 hxUXQg"
      font-size="smaller"
      type="warning"
    >
      Warning
    </p>
  </div>
</div>
`;
